--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "jquery": "^3.7.1",
         "owl.carousel": "^2.3.4",
         "sass": "^1.71.1",
+        "select2": "^4.1.0-rc.0",
         "vue": "^3.4.21",
         "vue-router": "^4.3.0"
     }
